<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextClock
        android:id="@+id/dialog_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:format24Hour="H:mm"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isopen_text_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_alarmsetting_isopen_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_clock" />

    <CheckBox
        android:id="@+id/isopen_check_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/isopen_text_myself"
        app:layout_constraintTop_toBottomOf="@+id/dialog_clock" />

    <TextView
        android:id="@+id/text_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_alarmsetting_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isopen_text_myself" />

    <Button
        android:id="@+id/mButton_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/set_alarmsetting_time_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_myself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_myself"
        app:layout_constraintVertical_bias="0.65" />


    <TextView
        android:id="@+id/repeattext_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_alarmsetting_repeat_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_myself" />

    <Button
        android:id="@+id/repeatButton_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/set_alarmsetting_repeat_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/repeattext_myself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repeattext_myself" />

</android.support.constraint.ConstraintLayout>